# Windoscy

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-windows.yml  release-windows.yml
docs/: github-actions-windows-build-notes.md  tech-stack-decision.md  win32-app-split-todolist.md  windows-maccy-clone-todolist.md
src/: CMakeLists.txt
src/app/: main_win32.cpp  win32_app.cpp  win32_app.h  win32_app_anon.inc  win32_app_internal.cpp  win32_app_settings_core.inc  win32_app_settings_message.inc
src/app/resources/: maccy.rc
src/core/: history_item.cpp  history_item.h  history_persistence.cpp  history_persistence.h  history_store.cpp  history_store.h  ignore_rules.cpp  ignore_rules.h  search.cpp  search.h  search_highlight.cpp  search_highlight.h  settings.cpp  settings.h
src/platform/win32/: README.md  clipboard.cpp  clipboard.h  input.cpp  input.h  source_app.cpp  source_app.h  startup.cpp  startup.h  utf.cpp  utf.h
tests/: CMakeLists.txt  core_smoke.cpp  history_persistence_test.cpp  history_store_test.cpp  ignore_rules_test.cpp  search_highlight_test.cpp  search_modes_test.cpp  settings_test.cpp
